--- a/style.css
+++ b/style.css
@@ -24,17 +24,18 @@ h2{
     margin: 2px;
     /* outline:1px solid black; */
     display:grid;
-    grid-template-columns: repeat(auto-fill,  minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill,  minmax(350px, 1fr));
     grid-template-rows: auto;
     gap:20px;
     padding:20px;
-    background-color:hsla(60, 8%, 95%, 1.00);
+    background-color:hsla(0, 0%, 92%, 1.00);
 }
 
 .project-card{
     --card-padding: 16px;
     --card-radius: 8px;
     background:white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border:1px solid lightgray;
     border-radius:var(--card-radius);
     padding:var(--card-padding);
